add comment and unit tests